# HyperbolicML

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
datasets/: UCIdata.py  UCIdataE.py  football.py  gausshyper.py  polbooks.py  wordnet_full.py
examples/: basic_usage.py
hyperXGB/: VALIDATION_AND_CHANGES.md  __init__.py  api.py  compare_implementations.py  main_hororf.py  main_run_UCIE.py  main_run_gauss.py  main_run_horosvm.py  main_run_multi.py  main_run_svm.py  main_run_wordnet.py  main_run_wordnet_batch.py  manifolds.py  orthogonalarray256.csv  readme.md  run_ucie.py  test_all_datasets.py
hyperXGB/benchmark/: README.md  benchmark_batch_loss.py  benchmark_simple.py  temp_config.yml  test_with_existing_code.py
hyperXGB/configs/: params.UCIdata.yml  params.UCIdataE.yml  params.football.yml  params.gauss.yml  params.gausshyper.yml  params.karate.yml  params.polblogs.yml  params.polbooks.yml
hyperXGB/data/: Eembeddings.npy  animal_labels.npy  embeddings.npy  group_labels.npy  mammal_labels.npy  occupation_labels.npy  rodent_labels.npy  solid_labels.npy  tree_labels.npy  worker_labels.npy
hyperXGB/datasets/: __init__.py  football.py  gauss.py  gausshyper.py  karate.py  polblogs.py  polbooks.py  wordnet_full.py  wordnet_multi.py
hyperXGB/hororf/: loaddata.py  node.py  rf_trainer.py  utils.py  visualization.py
hyperXGB/hsvm/: horosvm.py  hsvm.py  htools.py  platt.py
hyperXGB/logs/: README.md
hyperbolic_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_api_examples.py  test_installation.py
(+31 files in other folders)
