[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperbolic-ml"
version = "1.0.0"
description = "High-Performance Hyperbolic Machine Learning Library"
readme = "README.md"
authors = [
    {name = "Lukas Jochymek"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = [
    "machine learning",
    "hyperbolic geometry", 
    "manifold learning",
    "xgboost"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "xgboost>=1.6.0", 
    "scikit-learn>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["HyperbolicML*"] 